<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/crime_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/black"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/crime_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/camera_icon"
            app:layout_constraintEnd_toEndOf="@+id/crime_photo"
            app:layout_constraintStart_toStartOf="@+id/crime_photo"
            app:layout_constraintTop_toBottomOf="@+id/crime_photo" />


        <TextView
            android:id="@+id/title_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/crime_title_label"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/crime_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/crime_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/crime_title_hint"
            app:layout_constraintStart_toEndOf="@+id/crime_photo"
            app:layout_constraintTop_toBottomOf="@id/title_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label" />

    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed Nov 14 11:56 EST 2018" />

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label" />

    <Button
        android:id="@+id/choose_suspect_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/choose_suspect_txt" />

    <Button
        android:id="@+id/send_report_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/send_report_txt" />
</LinearLayout>